--- a/src/css/takenote.css
+++ b/src/css/takenote.css
@@ -82,3 +82,127 @@
     padding:10px;
     flex-wrap: wrap;
 }
+
+/* //////////////////////////////////////////////////////////mediascreen/////////////////////////////// */
+
+
+@media screen and (max-width:1098px)  and (min-width:768px){
+
+    .takenote-bar{
+        border: 1.2px solid silver;
+        width:50%;
+        height: 40px;
+        margin-left: 25%;
+        margin-top: 40px;
+        border-radius:6px;
+        justify-content: space-between;
+        display: flex;
+        box-sizing:inherit;
+        box-shadow: .4px 0.4px gainsboro, 1px 0 0.9em silver;
+        font-family: Roboto,Arial,sans-serif;
+        color: darkslategray;
+        font-weight: 400;
+        letter-spacing: .01428571em;
+    }
+
+
+
+    .takenote-editor{
+        border: 1.2px solid silver;
+        width:50%;
+        min-height: 128px;
+        margin-left: 25%;
+        margin-top: 40px;
+        border-radius:6px;
+        display: flex;
+        flex-direction: column;
+        align-content: baseline;
+        box-shadow: .4px 0.4px gainsboro, 1px 0 0.9em silver;
+       
+    }
+    
+   
+}
+
+@media screen and (max-width:768px) and (min-width:600px){
+
+.takenote-bar {
+    border: 1.2px solid silver;
+    width: 400px;
+    height: 40px;
+    margin-left: 135px;
+    margin-top: 40px;
+    border-radius: 6px;
+    justify-content: space-between;
+    display: flex;
+    box-sizing: inherit;
+    box-shadow: 0.4px 0.4px gainsboro, 1px 0 0.9em silver;
+    font-family: Roboto,Arial,sans-serif;
+    color: darkslategray;
+    font-weight: 400;
+    letter-spacing: .01428571em;
+}
+
+.takenote-editor{
+    border: 1.2px solid silver;
+    width:400px;
+    min-height: 128px;
+    margin-left: 135px;
+    margin-top: 40px;
+    border-radius:6px;
+    display: flex;
+    flex-direction: column;
+    align-content: baseline;
+    box-shadow: .4px 0.4px gainsboro, 1px 0 0.9em silver;
+   
+}
+
+
+}
+
+@media screen and (max-width:600px) and (min-width:320px){
+.takenote-bar {
+    border: 1.2px solid silver;
+    width: 75%;
+    height: 40px;
+    margin-left: 20%;
+    margin-top: 40px;
+    border-radius: 6px;
+    justify-content: space-between;
+    display: flex;
+    box-sizing: inherit;
+    box-shadow: 0.4px 0.4px gainsboro, 1px 0 0.9em silver;
+    font-family: Roboto,Arial,sans-serif;
+    color: darkslategray;
+    font-weight: 400;
+    letter-spacing: .01428571em;
+}
+
+
+.takenote-editor{
+    border: 1.2px solid silver;
+    width:78%;
+    min-height: 128px;
+    margin-left: 20%;
+    margin-top: 40px;
+    border-radius:6px;
+    display: flex;
+    flex-direction: column;
+    align-content: baseline;
+    box-shadow: .4px 0.4px gainsboro, 1px 0 0.9em silver;
+   
+}
+
+#nullbuttons{
+    display: none;
+
+}
+
+
+.close{
+    margin-left: 25% !important;
+}
+
+
+
+}
