--- a/src/css/collaberators.css
+++ b/src/css/collaberators.css
@@ -148,3 +148,85 @@ margin-left: 0px;
 
 
 }
+
+@media screen and (min-width:320px) and (max-width:600px) {
+    
+
+    .collab_editor {
+        border: 1.2px solid silver;
+        width: 81%;
+        min-height: 183px;
+        margin-left: 68px;
+        margin-top: 40px;
+        border-radius: 6px;
+        display: flex;
+        flex-direction: column;
+        align-content: baseline;
+        box-shadow: 0.4px 0.4px gainsboro, 1px 0 0.9em silver;
+    }
+
+    .MuiButton-text,.scbuttons{
+        color:  black !important ;   
+        text-transform: capitalize !important;
+        font-weight: bold;
+        margin-left:25%;
+       }
+
+       
+.footer{
+    width:100%;
+    /* border:2px solid red ; */
+    height: 43px;
+    border-radius:6px;
+    background-color: whitesmoke;
+    margin-left: 0px;
+
+
+
+}
+
+}
+
+
+@media screen  and (min-width:600px) and (max-width:1098px){
+
+
+    .collab_editor {
+        border: 1.2px solid silver;
+        width: 60%;
+        min-height: 183px;
+        margin-left: 20%;
+        margin-top: 40px;
+        border-radius: 6px;
+        display: flex;
+        flex-direction: column;
+        align-content: baseline;
+        box-shadow: 0.4px 0.4px gainsboro, 1px 0 0.9em silver;
+    }
+
+    .MuiButton-text,.scbuttons{
+        color:  black !important ;   
+        text-transform: capitalize !important;
+        font-weight: bold;
+        margin-left:25%;
+       }
+
+       
+.footer{
+    width:100%;
+    /* border:2px solid red ; */
+    height: 43px;
+    border-radius:6px;
+    background-color: whitesmoke;
+    margin-left: 0px;
+
+
+
+}
+
+
+
+
+
+    
+}
