--- a/src/css/reminder.css
+++ b/src/css/reminder.css
@@ -6,6 +6,7 @@
     box-shadow: .1px 0.1px gainsboro, 1px 0 0.9em silver ; 
     padding-top: 20px;
     padding-left: 5px;
+    z-index:1400;
     
 }
 .datebox{
